# CurseCapsule

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure
CurseCapsule/: CMakeLists.txt
CurseCapsule/headers/CurseCapsule/: definitions.hpp  hello.hpp  window.hpp
CurseCapsule/src/: hello.cpp  window.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
